--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
